{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 51,
  "lineage": "33520eb2-f72e-08b3-376e-8dbb713f439e",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "user20-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user20resourcegroup/providers/Microsoft.Network/loadBalancers/user20lb/frontendIPConfigurations/user20PublicIPAddress",
                "inbound_nat_rules": [
                  "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user20resourcegroup/providers/Microsoft.Network/loadBalancers/user20lb/inboundNatRules/ssh.1",
                  "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user20resourcegroup/providers/Microsoft.Network/loadBalancers/user20lb/inboundNatRules/ssh.2"
                ],
                "load_balancer_rules": [
                  "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user20resourcegroup/providers/Microsoft.Network/loadBalancers/user20lb/loadBalancingRules/http"
                ],
                "name": "user20PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user20resourcegroup/providers/Microsoft.Network/publicIPAddresses/mypublicIP"
              }
            ],
            "id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user20resourcegroup/providers/Microsoft.Network/loadBalancers/user20lb",
            "location": "koreacentral",
            "name": "user20lb",
            "resource_group_name": "user20resourcegroup",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_public_ip.user20-publicip",
            "azurerm_resource_group.user20-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "user200-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user200resourcegroup/providers/Microsoft.Network/loadBalancers/user200lb/frontendIPConfigurations/user200PublicIPAddress",
                "inbound_nat_rules": [
                  "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user200resourcegroup/providers/Microsoft.Network/loadBalancers/user200lb/inboundNatRules/ssh.2",
                  "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user200resourcegroup/providers/Microsoft.Network/loadBalancers/user200lb/inboundNatRules/ssh.3"
                ],
                "load_balancer_rules": [
                  "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user200resourcegroup/providers/Microsoft.Network/loadBalancers/user200lb/loadBalancingRules/http"
                ],
                "name": "user200PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user200resourcegroup/providers/Microsoft.Network/publicIPAddresses/mypublicIP"
              }
            ],
            "id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user200resourcegroup/providers/Microsoft.Network/loadBalancers/user200lb",
            "location": "koreacentral",
            "name": "user200lb",
            "resource_group_name": "user200resourcegroup",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_public_ip.user200-publicip",
            "azurerm_resource_group.user200-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "user20-bpepool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user20resourcegroup/providers/Microsoft.Compute/virtualMachineScaleSets/user20vmss/virtualMachines/1/networkInterfaces/terraformnetworkprofile/ipConfigurations/TestIPConfiguration",
              "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user20resourcegroup/providers/Microsoft.Compute/virtualMachineScaleSets/user20vmss/virtualMachines/2/networkInterfaces/terraformnetworkprofile/ipConfigurations/TestIPConfiguration"
            ],
            "id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user20resourcegroup/providers/Microsoft.Network/loadBalancers/user20lb/backendAddressPools/user20-BackEndAddressPool",
            "load_balancing_rules": [
              "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user20resourcegroup/providers/Microsoft.Network/loadBalancers/user20lb/loadBalancingRules/http"
            ],
            "loadbalancer_id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user20resourcegroup/providers/Microsoft.Network/loadBalancers/user20lb",
            "name": "user20-BackEndAddressPool",
            "resource_group_name": "user20resourcegroup"
          },
          "dependencies": [
            "azurerm_lb.user20-lb",
            "azurerm_public_ip.user20-publicip",
            "azurerm_resource_group.user20-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "user200-bpepool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user200resourcegroup/providers/Microsoft.Compute/virtualMachineScaleSets/user200vmss/virtualMachines/2/networkInterfaces/terraformnetworkprofile/ipConfigurations/TestIPConfiguration",
              "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user200resourcegroup/providers/Microsoft.Compute/virtualMachineScaleSets/user200vmss/virtualMachines/3/networkInterfaces/terraformnetworkprofile/ipConfigurations/TestIPConfiguration"
            ],
            "id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user200resourcegroup/providers/Microsoft.Network/loadBalancers/user200lb/backendAddressPools/user200-BackEndAddressPool",
            "load_balancing_rules": [
              "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user200resourcegroup/providers/Microsoft.Network/loadBalancers/user200lb/loadBalancingRules/http"
            ],
            "loadbalancer_id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user200resourcegroup/providers/Microsoft.Network/loadBalancers/user200lb",
            "name": "user200-BackEndAddressPool",
            "resource_group_name": "user200resourcegroup"
          },
          "dependencies": [
            "azurerm_resource_group.user200-rg",
            "azurerm_lb.user200-lb",
            "azurerm_public_ip.user200-publicip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_nat_pool",
      "name": "lbnatpool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_port": 22,
            "frontend_ip_configuration_id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user20resourcegroup/providers/Microsoft.Network/loadBalancers/user20lb/frontendIPConfigurations/user20PublicIPAddress",
            "frontend_ip_configuration_name": "user20PublicIPAddress",
            "frontend_port_end": 50119,
            "frontend_port_start": 50000,
            "id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user20resourcegroup/providers/Microsoft.Network/loadBalancers/user20lb/inboundNatPools/ssh",
            "loadbalancer_id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user20resourcegroup/providers/Microsoft.Network/loadBalancers/user20lb",
            "name": "ssh",
            "protocol": "Tcp",
            "resource_group_name": "user20resourcegroup"
          },
          "dependencies": [
            "azurerm_lb.user20-lb",
            "azurerm_public_ip.user20-publicip",
            "azurerm_resource_group.user20-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_nat_pool",
      "name": "lbnatpool200",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_port": 22,
            "frontend_ip_configuration_id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user200resourcegroup/providers/Microsoft.Network/loadBalancers/user200lb/frontendIPConfigurations/user200PublicIPAddress",
            "frontend_ip_configuration_name": "user200PublicIPAddress",
            "frontend_port_end": 50119,
            "frontend_port_start": 50000,
            "id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user200resourcegroup/providers/Microsoft.Network/loadBalancers/user200lb/inboundNatPools/ssh",
            "loadbalancer_id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user200resourcegroup/providers/Microsoft.Network/loadBalancers/user200lb",
            "name": "ssh",
            "protocol": "Tcp",
            "resource_group_name": "user200resourcegroup"
          },
          "dependencies": [
            "azurerm_lb.user200-lb",
            "azurerm_public_ip.user200-publicip",
            "azurerm_resource_group.user200-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "user20-lb-probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user20resourcegroup/providers/Microsoft.Network/loadBalancers/user20lb/probes/http-probe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user20resourcegroup/providers/Microsoft.Network/loadBalancers/user20lb/loadBalancingRules/http"
            ],
            "loadbalancer_id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user20resourcegroup/providers/Microsoft.Network/loadBalancers/user20lb",
            "name": "http-probe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Http",
            "request_path": "/",
            "resource_group_name": "user20resourcegroup"
          },
          "dependencies": [
            "azurerm_lb.user20-lb",
            "azurerm_public_ip.user20-publicip",
            "azurerm_resource_group.user20-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "user200-lb-probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user200resourcegroup/providers/Microsoft.Network/loadBalancers/user200lb/probes/http-probe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user200resourcegroup/providers/Microsoft.Network/loadBalancers/user200lb/loadBalancingRules/http"
            ],
            "loadbalancer_id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user200resourcegroup/providers/Microsoft.Network/loadBalancers/user200lb",
            "name": "http-probe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Http",
            "request_path": "/",
            "resource_group_name": "user200resourcegroup"
          },
          "dependencies": [
            "azurerm_lb.user200-lb",
            "azurerm_public_ip.user200-publicip",
            "azurerm_resource_group.user200-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lbrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user20resourcegroup/providers/Microsoft.Network/loadBalancers/user20lb/backendAddressPools/user20-BackEndAddressPool",
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user20resourcegroup/providers/Microsoft.Network/loadBalancers/user20lb/frontendIPConfigurations/user20PublicIPAddress",
            "frontend_ip_configuration_name": "user20PublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user20resourcegroup/providers/Microsoft.Network/loadBalancers/user20lb/loadBalancingRules/http",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user20resourcegroup/providers/Microsoft.Network/loadBalancers/user20lb",
            "name": "http",
            "probe_id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user20resourcegroup/providers/Microsoft.Network/loadBalancers/user20lb/probes/http-probe",
            "protocol": "Tcp",
            "resource_group_name": "user20resourcegroup"
          },
          "dependencies": [
            "azurerm_lb.user20-lb",
            "azurerm_lb_backend_address_pool.user20-bpepool",
            "azurerm_lb_probe.user20-lb-probe",
            "azurerm_public_ip.user20-publicip",
            "azurerm_resource_group.user20-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lbrule200",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user200resourcegroup/providers/Microsoft.Network/loadBalancers/user200lb/backendAddressPools/user200-BackEndAddressPool",
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user200resourcegroup/providers/Microsoft.Network/loadBalancers/user200lb/frontendIPConfigurations/user200PublicIPAddress",
            "frontend_ip_configuration_name": "user200PublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user200resourcegroup/providers/Microsoft.Network/loadBalancers/user200lb/loadBalancingRules/http",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user200resourcegroup/providers/Microsoft.Network/loadBalancers/user200lb",
            "name": "http",
            "probe_id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user200resourcegroup/providers/Microsoft.Network/loadBalancers/user200lb/probes/http-probe",
            "protocol": "Tcp",
            "resource_group_name": "user200resourcegroup"
          },
          "dependencies": [
            "azurerm_lb_backend_address_pool.user200-bpepool",
            "azurerm_lb_probe.user200-lb-probe",
            "azurerm_public_ip.user200-publicip",
            "azurerm_resource_group.user200-rg",
            "azurerm_lb.user200-lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "user200nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user200resourcegroup/providers/Microsoft.Network/networkSecurityGroups/user200nsg",
            "location": "koreacentral",
            "name": "user200nsg",
            "resource_group_name": "user200resourcegroup",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 2001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Terraform Demo"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.user200-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "user20nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user20resourcegroup/providers/Microsoft.Network/networkSecurityGroups/user20nsg",
            "location": "koreacentral",
            "name": "user20nsg",
            "resource_group_name": "user20resourcegroup",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 2001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Terraform Demo"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.user20-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "user20-publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "user20resourcegroup",
            "fqdn": "user20resourcegroup.koreacentral.cloudapp.azure.com",
            "id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user20resourcegroup/providers/Microsoft.Network/publicIPAddresses/mypublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.141.21.132",
            "ip_version": "IPv4",
            "location": "koreacentral",
            "name": "mypublicIP",
            "resource_group_name": "user20resourcegroup",
            "sku": "Basic",
            "tags": {
              "environment": "staging"
            }
          },
          "dependencies": [
            "azurerm_resource_group.user20-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "user200-publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "user200resourcegroup",
            "fqdn": "user200resourcegroup.koreacentral.cloudapp.azure.com",
            "id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user200resourcegroup/providers/Microsoft.Network/publicIPAddresses/mypublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.141.0.252",
            "ip_version": "IPv4",
            "location": "koreacentral",
            "name": "mypublicIP",
            "resource_group_name": "user200resourcegroup",
            "sku": "Basic",
            "tags": {
              "environment": "staging"
            }
          },
          "dependencies": [
            "azurerm_resource_group.user200-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "user20-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "20.0.1.0/24",
            "address_prefixes": [
              "20.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user20resourcegroup/providers/Microsoft.Network/virtualNetworks/user20-myVnet/subnets/user20-mysubnet1",
            "name": "user20-mysubnet1",
            "resource_group_name": "user20resourcegroup",
            "virtual_network_name": "user20-myVnet"
          },
          "dependencies": [
            "azurerm_resource_group.user20-rg",
            "azurerm_virtual_network.user20-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "user200-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "200.0.1.0/24",
            "address_prefixes": [
              "200.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user200resourcegroup/providers/Microsoft.Network/virtualNetworks/user200-myVnet/subnets/user200-mysubnet1",
            "name": "user200-mysubnet1",
            "resource_group_name": "user200resourcegroup",
            "virtual_network_name": "user200-myVnet"
          },
          "dependencies": [
            "azurerm_resource_group.user200-rg",
            "azurerm_virtual_network.user200-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "user20-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "20.0.0.0/16"
            ],
            "guid": "a504b0f0-7c1e-46a0-8964-f682d275ea0f",
            "id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user20resourcegroup/providers/Microsoft.Network/virtualNetworks/user20-myVnet",
            "location": "koreacentral",
            "name": "user20-myVnet",
            "resource_group_name": "user20resourcegroup",
            "subnet": [
              {
                "address_prefix": "20.0.1.0/24",
                "id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user20resourcegroup/providers/Microsoft.Network/virtualNetworks/user20-myVnet/subnets/user20-mysubnet1",
                "name": "user20-mysubnet1"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.user20-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "user200-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "200.0.0.0/16"
            ],
            "guid": "80f57bcd-82de-4a48-a302-9ad71edb875d",
            "id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user200resourcegroup/providers/Microsoft.Network/virtualNetworks/user200-myVnet",
            "location": "koreacentral",
            "name": "user200-myVnet",
            "resource_group_name": "user200resourcegroup",
            "subnet": [
              {
                "address_prefix": "200.0.1.0/24",
                "id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/user200resourcegroup/providers/Microsoft.Network/virtualNetworks/user200-myVnet/subnets/user200-mysubnet1",
                "name": "user200-mysubnet1"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.user200-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "user200p-rg-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "200.0.1.0/24"
            ],
            "guid": "695e1e0a-9702-4736-86df-e599c2b1a84a",
            "id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/peeredvnets-rg/providers/Microsoft.Network/virtualNetworks/peternetwork1",
            "location": "koreacentral",
            "name": "peternetwork1",
            "resource_group_name": "peeredvnets-rg",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.user200p-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "user20p-rg-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "20.0.2.0/24"
            ],
            "guid": "27a3a2d5-0355-4a80-a088-9935a46418c4",
            "id": "/subscriptions/1c2a5318-fcca-42b7-a64e-18882c6ddbe9/resourceGroups/peeredvnets-rg/providers/Microsoft.Network/virtualNetworks/peternetwork2",
            "location": "koreacentral",
            "name": "peternetwork2",
            "resource_group_name": "peeredvnets-rg",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.user20p-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "user200p-rg-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "user200p-rg-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "user20p-rg-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "user20p-rg-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    }
  ]
}